try to fix menu being cropped on smaller displays

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   /* overflow: hidden; */ /* remove this line */
-  min-height: 100vh; /* add this line */
+  /* min-height: 100vh; add this line */
 }
 
 
